--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clisim",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "CLI for running iOS/Android Simulators/Emulators",
   "main": "index.js",
   "bin": {
@@ -20,7 +20,10 @@
     "ios",
     "android"
   ],
-  "author": "Anton Kuznetsov <isnifer@gmail.com> (https://github.com/isnifer)",
+  "authors": [
+    "Anton Kuznetsov <isnifer@gmail.com> (https://github.com/isnifer)",
+    "Anton Petrov <petrov.aap@gmail.com> (https://github.com/itsmepetrov)"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/isnifer/clisim/issues"
