[2.3.0] Add current XCode.app detection

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "clisim",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "CLI for running iOS/Android Simulators/Emulators",
   "main": "index.js",
   "bin": {
-    "clisim": "./bin/clisim.js"
+    "clisim": "./bin/clisim.js",
+    "pub": "npm publish ./ --access public"
   },
   "scripts": {
     "test": "node __tests__/index.js"
@@ -31,20 +32,21 @@
   "homepage": "https://github.com/isnifer/clisim#readme",
   "dependencies": {
     "adbkit": "^2.9.0",
-    "chalk": "^1.1.3",
+    "chalk": "^2.4.2",
     "commander": "^2.9.0",
-    "inquirer": "^3.0.6",
-    "node-simctl": "^3.6.0",
+    "inquirer": "^6.5.0",
+    "node-simctl": "^5.0.2",
     "semver-compare": "^1.0.0",
     "text-table": "^0.2.0"
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "eslint-config-tipsi": "^1.5.0",
+    "@detools/eslint-config": "^1.2.0",
+    "eslint": "^6.1.0",
+    "prettier": "^1.18.2",
     "tap-diff": "^0.1.1",
     "tape": "^4.6.3"
   },
   "eslintConfig": {
-    "extends": "tipsi"
+    "extends": "@detools/eslint-config"
   }
 }
