--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clisim",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "CLI for running iOS/Android Simulators/Emulators",
   "main": "index.js",
   "bin": {
@@ -41,9 +41,7 @@
   "devDependencies": {
     "@detools/eslint-config": "^1.2.0",
     "eslint": "^6.1.0",
-    "prettier": "^1.18.2",
-    "tap-diff": "^0.1.1",
-    "tape": "^4.6.3"
+    "prettier": "^1.18.2"
   },
   "eslintConfig": {
     "extends": "@detools/eslint-config"
